--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-history-api-fallback": "^1.6.0",
     "express": "^4.17.1",
     "express-history-api-fallback": "^2.2.1",
     "if-env": "^1.0.4",
